--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
+    "formidable": "^3.5.4",
     "mysql2": "^3.14.1",
     "next": "15.3.2",
     "react": "^19.0.0",
